hubbleui.yaml
apiVersion: v1
kind: Service
metadata:
  name: hubble-ui-lb
  namespace: kube-system
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.200.128  # Use the IP address from the pool
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: hubble-ui  # Match the labels used by the Hubble UI Deployment
