rancher-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rancher-service
  annotations:
    metallb.universe.tf/allow-shared-ip: home
spec:
  selector:
    app: rancher
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
  loadBalancerIP: 192.168.200.150  # Specify the desired IP address for Rancher within metallb
