hubble.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble-ui-ingress
  namespace: kube-system
spec:
  rules:
    - host: hubble.example.com  # Change this to your desired hostname
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hubble-ui
                port:
                  number: 80
